--- a/Site subsubnautica/css/estilo.css
+++ b/Site subsubnautica/css/estilo.css
@@ -11,9 +11,9 @@
 	 
 	 background:white;
 	 border-radius: 10px;
-	 passing: 15px;
+	 padding: 15px;
 	 width: 500px;
-	 height: 100px;
+	 height: 150px;
 	 margin: auto;
 	 box-shadow: 5px 5px 10px rgba(0,0,0,0.350);
 	 
