--- a/Site subsubnautica/css/estilo.css
+++ b/Site subsubnautica/css/estilo.css
@@ -79,5 +79,15 @@ div.cadastro_contato{
 	justify-content: center;
 	display: flex;
 	
+}
+
+section.sobre{
+   
+	background:#0991f4;
+	border-radius: 0px;
+	padding: 15px;
+	width: 1000px;
+	height: auto;
+	margin: auto; 
 
 }
